[gd_scene load_steps=15 format=2]

[ext_resource path="res://systems/phantom_camera/phantom_camera_host_3d.gd" type="Script" id=1]
[ext_resource path="res://systems/phantom_camera/phantom_camera_3d.gd" type="Script" id=2]
[ext_resource path="res://dev/interactive/test_phantom_camera/test_phantom_camera.gd" type="Script" id=3]
[ext_resource path="res://assets/scenes/exports/forest_scene_01/forest_scene_01.tscn" type="PackedScene" id=4]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="CubeMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.533333, 0.74902, 0.313726, 1 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 1, 0.956863, 0.0588235, 1 )

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.478431, 0.717647, 0.745098, 1 )

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 1, 0, 0.984314, 1 )

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.180392, 1, 0.0823529, 1 )

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 1, 0.0862745, 0.0862745, 1 )

[sub_resource type="ProceduralSky" id=9]

[sub_resource type="Environment" id=10]
background_mode = 2
background_sky = SubResource( 9 )
ambient_light_sky_contribution = 0.71
fog_depth_end = 148.9

[node name="Spatial" type="Spatial"]
script = ExtResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="."]
material_override = SubResource( 1 )
mesh = SubResource( 2 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.61605, 0, 0 )
material_override = SubResource( 3 )
mesh = SubResource( 2 )

[node name="MeshInstance3" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.08439, 0, 0 )
material_override = SubResource( 4 )
mesh = SubResource( 2 )

[node name="MeshInstance4" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10.9425, 0, 0 )
material_override = SubResource( 5 )
mesh = SubResource( 2 )

[node name="MeshInstance5" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -16.6168, 0, 0 )
material_override = SubResource( 6 )
mesh = SubResource( 2 )

[node name="MeshInstance6" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.63943, 0, 0 )
material_override = SubResource( 7 )
mesh = SubResource( 2 )

[node name="MeshInstance7" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15.8943, 0, 0 )
mesh = SubResource( 2 )

[node name="MeshInstance8" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 21.4237, 0, 0 )
material_override = SubResource( 8 )
mesh = SubResource( 2 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 27.3885 )
current = true
far = 512.0

[node name="PhantomCameraHost3D" type="Node" parent="Camera"]
script = ExtResource( 1 )

[node name="PhantomCamera1" type="Camera" parent="."]
transform = Transform( 0.924938, 0, 0.380118, 0, 1, 0, -0.380118, 0, 0.924938, 15.0347, 0, 23.5659 )
current = true
script = ExtResource( 2 )

[node name="PhantomCamera2" type="Camera" parent="."]
transform = Transform( 0.740629, 0, -0.671914, 0, 1, 0, 0.671914, 0, 0.740629, -13.0678, 0, 23.5659 )
script = ExtResource( 2 )

[node name="PhantomCamera3" type="Camera" parent="."]
transform = Transform( 0.740629, 1.10362e-08, -0.671914, 0.368053, 0.836631, 0.405692, 0.562144, -0.547768, 0.619633, -13.0678, 11.6629, 9.04528 )
script = ExtResource( 2 )

[node name="PhantomCamera4" type="Camera" parent="."]
transform = Transform( 0.929743, -0.326124, -0.17094, 0.368053, 0.836631, 0.405693, 0.0107074, -0.440105, 0.897883, -13.0678, 109.934, 100.635 )
script = ExtResource( 2 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.97521, 0.151911, -0.160901, 0.0367388, 0.605883, 0.794705, 0.218212, -0.780915, 0.585282, 23.827, 2.397, -10.198 )
light_energy = 0.471
directional_shadow_mode = 0
directional_shadow_depth_range = 1
directional_shadow_max_distance = 52.3

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/margin_top = 40
custom_constants/margin_left = 40

[node name="Button" type="Button" parent="MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 158.0
margin_bottom = 77.0
text = "Advance"

[node name="Spatial" parent="." instance=ExtResource( 4 )]
script = null

[node name="Camera" parent="Spatial" index="1"]
current = false

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 10 )

[connection signal="pressed" from="MarginContainer/Button" to="." method="_on_Button_pressed"]

[editable path="Spatial"]
[editable path="Spatial/TitleLayer/ColorRect/HBoxContainer/MarginContainer2/VBoxContainer/PlayButton"]
